# bondsman

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  brand.md  package-lock.json  package.json
.claude/: launch.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml
backend/: package.json  tsconfig.json
backend/src/: demo.ts
backend/src/agent/: anthropic.ts  decision.ts  hashing.ts  main.ts  prompt.ts  runner.ts
backend/src/api/: action-detail.ts  arm.ts  demo-jobs.ts  demo-ready.ts  eligibility.ts  errors.ts  idempotency.ts  main.ts  operator-auth.ts  ready-pool.ts  resolution.ts  routes.ts  schemas.ts  server.ts  startup.ts  wallet-challenge.ts
backend/src/assurance/: service.ts
backend/src/casper/: actions.ts  contracts.ts  deploys.ts  direct-call.ts  funding.ts  keys.ts  odra-cli.ts  rpc.ts  sdk.ts  signer-queue.ts  transactions.ts  transfers.ts
backend/src/config/: env.ts
backend/src/db/: database.ts  repositories.ts  schema.ts
backend/src/evidence/: bond-economics.ts  canonical.ts  replay.ts  store.ts
backend/src/integrator/: main.ts  service.ts
backend/src/listener/: event-stream.ts  events.ts  main.ts  reconcile.ts
backend/src/mcp/: main.ts  remote.ts  tools.ts
backend/src/ops/: funding-monitor.ts  observability.ts  spend-guard.ts
backend/src/policy/: engine.ts
backend/src/proofs/: service.ts
backend/src/receipts/: service.ts
backend/src/shared/: active-deployment.ts  deployment.ts  invoices.ts
backend/src/verifiers/: delivery-attestation.ts  registry.ts
backend/src/verify/: payment.ts  service.ts  submit-authorization.ts  x402.ts
backend/src/watchdog/: detection.ts  main.ts  reasoning.ts  service.ts
backend/test/: demo.test.ts
backend/test/agent/: decision.test.ts  hashing.test.ts  runner.test.ts
backend/test/api/: arm.test.ts  eligibility.test.ts  ready-pool.test.ts  routes.test.ts  startup.test.ts  wallet-challenge.test.ts
backend/test/assurance/: service.test.ts
backend/test/casper/: deployment.test.ts  deploys.test.ts  funding.test.ts  keys.test.ts  odra-cli.test.ts  redeploy.test.ts  rpc.test.ts  signer-queue.test.ts  transactions.test.ts  transfers.test.ts
backend/test/config/: env.test.ts
backend/test/db/: database.test.ts  invariants.test.ts
backend/test/evidence/: canonical-proof.test.ts  store.test.ts
backend/test/listener/: event-stream.test.ts  events.test.ts
backend/test/mcp/: tools.test.ts
backend/test/ops/: spend-guard.test.ts
backend/test/shared/: active-deployment.test.ts  invoices.test.ts
backend/test/verifiers/: delivery-attestation.test.ts
backend/test/verify/: payment.test.ts
contracts/: Cargo.toml  Odra.toml
contracts/bond_vault/: Cargo.toml
contracts/bond_vault/src/: bond_vault.rs  lib.rs
contracts/bond_vault/tests/: bond_vault.rs
contracts/bond_vault_v2/: Cargo.toml
contracts/bond_vault_v2/src/: bond_vault_v2.rs  lib.rs
contracts/bondsman_controller/: Cargo.toml
contracts/bondsman_controller/src/: bondsman_controller.rs  lib.rs
contracts/bondsman_controller/tests/: controller.rs  resolution.rs
contracts/bondsman_controller_v2/: Cargo.toml
contracts/bondsman_controller_v2/src/: bondsman_controller_v2.rs  lib.rs
contracts/bondsman_controller_v2/tests/: v2_resolution.rs
contracts/cli/: Cargo.toml
contracts/cli/src/: main.rs  v2.rs
contracts/delivery_contradiction_verifier_v2/: Cargo.toml
contracts/delivery_contradiction_verifier_v2/src/: delivery_contradiction_verifier_v2.rs  lib.rs
contracts/duplicate_claim_verifier_v2/: Cargo.toml  build.rs
contracts/duplicate_claim_verifier_v2/src/: duplicate_claim_verifier_v2.rs  lib.rs
contracts/invoice_pool/: Cargo.toml
contracts/invoice_pool/src/: invoice_pool.rs  lib.rs
contracts/invoice_pool/tests/: invoice_pool.rs
contracts/invoice_pool_v2/: Cargo.toml
contracts/invoice_pool_v2/src/: invoice_pool_v2.rs  lib.rs
contracts/mock_cspr_usd/: Cargo.toml  build.rs
contracts/mock_cspr_usd/src/: lib.rs  mock_cspr_usd.rs  toolchain_probe.rs
contracts/mock_cspr_usd/tests/: mock_cspr_usd.rs  toolchain_probe.rs
contracts/resources/: casper-test-contracts.toml  wcspr-test-contracts.toml
deployments/: testnet.json
docs/: ASSURANCE_MANIFEST.md  BOND_ECONOMICS.md  CANONICAL_ACTION_27_BUNDLE.json  CANONICAL_PROOF.md  CASPER_IMPACT.md  DESIGN_PARTNER_BRIEF.md  ECOSYSTEM_INTEGRATION_BLUEPRINTS.md  FAULT_CLASSES.md  INTEGRATION.md  INVARIANTS.md  JUDGING_EVIDENCE.md  LAUNCH_PLAN.md  POLICY_ENGINE.md  RECEIPT_VERIFICATION.md  ROLLBACK.md  THREAT_MODEL.md  X402_STATUS.md
examples/casper-agent-assurance/: README.md  index.ts
frontend/: .env.example  .gitignore  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/components/: Diagram.tsx  FaucetHint.tsx  Footer.tsx  Nav.tsx  RealVsDemo.tsx  ReserveGrowth.tsx  Roadmap.tsx  Seal.tsx  WalletButton.tsx
frontend/e2e/: mock-api.mjs  navigation-endurance.spec.ts  wallet-boundaries.spec.ts
frontend/lib/: account-hash.ts  account.ts  action-monitor.ts  agent-roles.ts  api.ts  canonical-action-27-fallback.ts  casper-wallet.ts  challenge-deploy.ts  events.ts  fonts.ts  format.ts  types.ts  wallet.tsx
frontend/public/: manifest.webmanifest
frontend/scripts/: action-monitor.test.mjs  check-canonical.mjs  copy-audit.test.mjs  format.test.mjs  generate-brand-rasters.mjs  receipt-state.test.mjs
mcp-package/: README.md  package-lock.json  package.json
mcp-package/examples/: watchdog.ts
mcp-package/src/: index.ts
scratchpad/: product-loop-audit.md  product-loop-feasibility.md  product-loop-spec.md
scripts/: canonical-export.ts  deploy-v2.ts  deploy.ts  prearm.ts  railway-boot.mjs  redeploy.ts  seed.ts  setup-watchdog.ts  v2-delivery-slash.ts  v2-duplicate-slash.ts  wire-v2.ts
seed/: demo-decisions.json  seed-invoices.json
spec/: bondsman-assurance-manifest-v1.schema.json
(+110 files in other folders)
