[workspace]
members = ["bond_vault", "bondsman_controller", "cli", "mock_cspr_usd"]
resolver = "2"

[workspace.dependencies]
odra = { version = "=2.8.2", default-features = false }
odra-build = { version = "=2.8.2", default-features = false }
odra-cli = { version = "=2.8.2", default-features = false }
odra-modules = { version = "=2.8.2", default-features = false }
odra-test = { version = "=2.8.2" }
casper-client = { version = "=5.0.0", default-features = false }

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
