[workspace]
members = [
    "bond_vault",
    "bondsman_controller",
    "cli",
    "invoice_pool",
    "invoice_pool_v2",
    "bond_vault_v2",
    "bondsman_controller_v2",
    "duplicate_claim_verifier_v2",
    "delivery_contradiction_verifier_v2",
    "mock_cspr_usd",
]
resolver = "2"

[workspace.dependencies]
odra = { version = "=2.8.2", default-features = false }
odra-build = { version = "=2.9.0", default-features = false }
odra-cli = { version = "=2.8.2", default-features = false }
odra-modules = { version = "=2.8.2", default-features = false }
odra-test = { version = "=2.8.2" }
casper-client = { version = "=5.0.0", default-features = false }

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
