[package]
edition = "2021"
name = "bond_vault"
version = "0.1.0"

[dependencies]
odra = { workspace = true }
odra-modules = { workspace = true }

[dev-dependencies]
mock_cspr_usd = { path = "../mock_cspr_usd" }
odra-test = { workspace = true }

[build-dependencies]
odra-build = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { workspace = true }

[[bin]]
name = "bond_vault_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "bond_vault_build_schema"
path = "bin/build_schema.rs"
test = false

