[package]
edition = "2021"
name = "bondsman_controller"
version = "0.1.0"

[dependencies]
bond_vault = { path = "../bond_vault" }
odra = { workspace = true }

[dev-dependencies]
mock_cspr_usd = { path = "../mock_cspr_usd" }
odra-test = { workspace = true }

[build-dependencies]
odra-build = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { workspace = true }

[[bin]]
name = "bondsman_controller_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "bondsman_controller_build_schema"
path = "bin/build_schema.rs"
test = false

