[package]
edition = "2021"
name = "bondsman_controller_v2"
version = "0.2.0"

[dependencies]
bond_vault_v2 = { path = "../bond_vault_v2" }
invoice_pool_v2 = { path = "../invoice_pool_v2" }
duplicate_claim_verifier_v2 = { path = "../duplicate_claim_verifier_v2" }
delivery_contradiction_verifier_v2 = { path = "../delivery_contradiction_verifier_v2" }
odra = { workspace = true }

[build-dependencies]
odra-build = { workspace = true }

[dev-dependencies]
mock_cspr_usd = { path = "../mock_cspr_usd" }
odra-test = { workspace = true }
ed25519-dalek = { version = "2.2.0", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { workspace = true }

[[bin]]
name = "bondsman_controller_v2_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "bondsman_controller_v2_build_schema"
path = "bin/build_schema.rs"
test = false
