[package]
edition = "2021"
name = "delivery_contradiction_verifier_v2"
version = "0.2.0"
[dependencies]
invoice_pool_v2 = { path = "../invoice_pool_v2" }
odra = { workspace = true }
ed25519-dalek = { version = "2.2.0", default-features = false }
[build-dependencies]
odra-build = { workspace = true }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { workspace = true }
[[bin]]
name = "delivery_contradiction_verifier_v2_build_contract"
path = "bin/build_contract.rs"
test = false
